lio [adding notebook to commit]

--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 191,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,8 @@
     "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T16:01:02.929__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-13T16:00:27.357__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-13T18:21:53.015__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-13T18:21:53.015__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-13T18:14:18.649__pomdp_trace.jld\",\n",
     "\n",
     "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
     "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
