--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -34,7 +34,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GridWorlds [c15fd557-8ec5-4bf9-9d87-df57ac477796]\n"
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Makie [ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Gen [ea4f424c-a589-11e8-07c0-fd5c91b9da4a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GenParticleFilters [56b76ac4-72ef-411e-b419-6d312ed86a6f]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GridWorlds [c15fd557-8ec5-4bf9-9d87-df57ac477796]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling LineWorlds [378ae85f-3ccf-4c92-8c74-de8c49c343b8]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling FileIOExt [f5f51d8f-5827-5d2e-939b-192fcd6ec70c]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GeometryBasicsExt [b238bd29-021f-5edc-8b0e-16b9cda5f63a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling IJuliaExt [2f4121a4-3b3a-5ce6-9c5e-1f2673ce168a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GenPOMDPs [f88df91c-fa0e-46d7-b73d-4420684e5acb]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Tasks2D [d49a4b09-0ba2-4df1-b547-2796ddccb60c]\n"
      ]
     }
    ],
@@ -98,12 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "313c14b7-1f1d-4698-b01c-eec1933bb749",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GLMakie [e9467ef8-e4e7-5192-8a1a-b1aee30e663a]\n"
+     ]
+    }
+   ],
    "source": [
     "import GLMakie\n",
     "GLMakie.activate!()"
@@ -119,17 +136,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "2a9f0278-b761-4322-ad3f-3d415bec205c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "var\"##StaticGenFunction_uniform_agent_pos#554\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "079c3b8b-48cc-4212-ae81-820c3af3df04",
    "metadata": {},
    "outputs": [
@@ -165,7 +182,7 @@
        "handle_wall_intersection (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "efcc51e8-203a-4d6b-8bfe-3eb6580aae73",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "var\"##StaticGenFunction_motion_model#592\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "var\"##StaticGenFunction_motion_model#355\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,17 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "0ce69a83-8fa6-4eca-af79-de37fc5a1d16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#600\", Bool[0, 0], false)"
+       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#363\", Bool[0, 0], false)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "5837a12e-5eb7-46da-b4d4-e344f35e8fd9",
    "metadata": {
     "tags": []
@@ -342,10 +359,10 @@
     {
      "data": {
       "text/plain": [
-       "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#554\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#592\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#600\", Bool[0, 0], false), var\"#162#163\"())"
+       "GenPOMDPs.GenPOMDP(var\"##StaticGenFunction_uniform_agent_pos#317\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), var\"##StaticGenFunction_motion_model#355\"(Dict{Symbol, Any}(), Dict{Symbol, Any}()), DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any, Any], false, Union{Nothing, Some{Any}}[nothing, nothing], var\"##observe_noisy_distances#363\", Bool[0, 0], false), var\"#69#70\"())"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "204c2329-a938-4e58-aac0-c81737db7168",
    "metadata": {
     "tags": []
@@ -371,10 +388,10 @@
     {
      "data": {
       "text/plain": [
-       "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#672\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
+       "GenPOMDPs.var\"##StaticGenFunction__ControlledTrajectoryModel#435\"(Dict{Symbol, Any}(), Dict{Symbol, Any}())"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "12a7671c-410e-4012-9e5c-d008bf4196ae",
    "metadata": {
     "tags": []
@@ -490,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "id": "b07fe72c",
    "metadata": {},
    "outputs": [],
@@ -507,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 14,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -587,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 48,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -610,17 +627,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 41,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T11:58:24.638__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,19 +675,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 45,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T11:58:41.912__pomdp_trace.jld.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,19 +725,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 49,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T11:59:29.857__pomdp_trace.jld.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 50,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -769,17 +807,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 51,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T12:01:05.355__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 54,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -823,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 55,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -833,7 +878,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -841,7 +886,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T18:40:47.556__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T12:05:39.505__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -871,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 59,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -884,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 60,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -894,7 +939,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,17 +962,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 61,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T12:08:31.842__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -935,7 +987,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T18:42:02.441__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T12:08:38.916__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-14T12:08:38.962__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-14T12:08:39.001__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -965,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 62,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -978,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 63,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -988,7 +1042,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -996,7 +1050,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-13T18:42:37.832__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T12:10:11.880__pomdp_trace.jld.\n"
      ]
     }
    ],
