--- a/notebooks_messy/Analysis.ipynb
+++ b/notebooks_messy/Analysis.ipynb
@@ -331,13 +331,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "163-element Vector{String}:\n",
+       "219-element Vector{String}:\n",
        " \"2023-12-06T15:21:41.953__pomdp_trace.jld\"\n",
        " \"2023-12-12T14:01:29.780__pomdp_trace.jld\"\n",
        " \"2023-12-12T14:01:39.916__pomdp_trace.jld\"\n",
@@ -352,21 +352,21 @@
        " \"2023-12-12T16:03:19.086__pomdp_trace.jld\"\n",
        " \"2023-12-12T16:10:20.411__pomdp_trace.jld\"\n",
        " ⋮\n",
-       " \"2023-12-13T18:37:32.078__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:37:32.094__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:37:32.130__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:37:32.166__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:37:32.205__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:37:32.250__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:37:32.286__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:40:08.657__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:40:47.556__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:42:02.441__pomdp_trace.jld\"\n",
-       " \"2023-12-13T18:42:37.832__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:08:17.095__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:08:17.134__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:08:31.842__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:08:38.916__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:08:38.962__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:08:39.001__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:10:11.880__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:16:53.015__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:17:20.027__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:17:22.410__pomdp_trace.jld\"\n",
+       " \"2023-12-14T12:17:25.367__pomdp_trace.jld\"\n",
        " \"notes.md\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,19 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element Vector{String}:\n",
+       "4-element Vector{String}:\n",
        " \"13T18:04:45\"\n",
        " \"13T18:37:32\"\n",
-       " \"14T10:44:03\""
+       " \"14T10:44:03\"\n",
+       " \"14T11:58\""
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,13 +400,14 @@
     "firsts = sort([\n",
     "    \"13T18:04:45\",\n",
     "    \"13T18:37:32\",\n",
-    "    \"14T10:44:03\" # Me playing around.  TODO - delete 14T10:44:03 to 14T10:52:44\n",
+    "    \"14T10:44:03\", # Me playing around.  TODO - delete 14T10:44:03 to 14T10:52:44\n",
+    "    \"14T11:58\"\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,19 +426,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element Vector{Any}:\n",
+       "4-element Vector{Any}:\n",
        " [\"2023-12-13T18:04:45.219__pomdp_trace.jld\", \"2023-12-13T18:14:18.649__pomdp_trace.jld\", \"2023-12-13T18:16:54.539__pomdp_trace.jld\", \"2023-12-13T18:16:54.570__pomdp_trace.jld\", \"2023-12-13T18:17:32.599__pomdp_trace.jld\", \"2023-12-13T18:19:45.183__pomdp_trace.jld\", \"2023-12-13T18:21:51.756__pomdp_trace.jld\", \"2023-12-13T18:21:52.908__pomdp_trace.jld\", \"2023-12-13T18:21:53.015__pomdp_trace.jld\"]\n",
        " [\"2023-12-13T18:37:32.078__pomdp_trace.jld\", \"2023-12-13T18:37:32.094__pomdp_trace.jld\", \"2023-12-13T18:37:32.130__pomdp_trace.jld\", \"2023-12-13T18:37:32.166__pomdp_trace.jld\", \"2023-12-13T18:37:32.205__pomdp_trace.jld\", \"2023-12-13T18:37:32.250__pomdp_trace.jld\", \"2023-12-13T18:37:32.286__pomdp_trace.jld\", \"2023-12-13T18:40:08.657__pomdp_trace.jld\", \"2023-12-13T18:40:47.556__pomdp_trace.jld\", \"2023-12-13T18:42:02.441__pomdp_trace.jld\", \"2023-12-13T18:42:37.832__pomdp_trace.jld\"]\n",
-       " [\"2023-12-14T10:44:03.141__pomdp_trace.jld\", \"2023-12-14T10:44:21.482__pomdp_trace.jld\", \"2023-12-14T10:44:32.234__pomdp_trace.jld\", \"2023-12-14T10:44:36.855__pomdp_trace.jld\", \"2023-12-14T10:44:52.875__pomdp_trace.jld\", \"2023-12-14T10:45:07.743__pomdp_trace.jld\", \"2023-12-14T10:45:18.810__pomdp_trace.jld\"]"
+       " [\"2023-12-14T10:44:03.141__pomdp_trace.jld\", \"2023-12-14T10:44:21.482__pomdp_trace.jld\", \"2023-12-14T10:44:32.234__pomdp_trace.jld\", \"2023-12-14T10:44:36.855__pomdp_trace.jld\", \"2023-12-14T10:44:52.875__pomdp_trace.jld\", \"2023-12-14T10:45:07.743__pomdp_trace.jld\", \"2023-12-14T10:45:18.810__pomdp_trace.jld\", \"2023-12-14T10:51:42.974__pomdp_trace.jld\", \"2023-12-14T10:51:46.492__pomdp_trace.jld\", \"2023-12-14T10:51:48.211__pomdp_trace.jld\"  …  \"2023-12-14T10:51:52.953__pomdp_trace.jld\", \"2023-12-14T10:51:54.486__pomdp_trace.jld\", \"2023-12-14T10:51:57.751__pomdp_trace.jld\", \"2023-12-14T10:52:00.233__pomdp_trace.jld\", \"2023-12-14T10:52:01.735__pomdp_trace.jld\", \"2023-12-14T10:52:04.278__pomdp_trace.jld\", \"2023-12-14T10:52:05.704__pomdp_trace.jld\", \"2023-12-14T10:52:07.984__pomdp_trace.jld\", \"2023-12-14T10:52:11.987__pomdp_trace.jld\", \"2023-12-14T10:52:44.356__pomdp_trace.jld\"]\n",
+       " [\"2023-12-14T11:58:19.831__pomdp_trace.jld\", \"2023-12-14T11:58:24.638__pomdp_trace.jld\", \"2023-12-14T11:58:26.869__pomdp_trace.jld\", \"2023-12-14T11:58:34.235__pomdp_trace.jld\", \"2023-12-14T11:58:39.916__pomdp_trace.jld\", \"2023-12-14T11:58:41.912__pomdp_trace.jld\", \"2023-12-14T11:59:01.519__pomdp_trace.jld\", \"2023-12-14T11:59:06.744__pomdp_trace.jld\", \"2023-12-14T11:59:06.784__pomdp_trace.jld\", \"2023-12-14T11:59:06.825__pomdp_trace.jld\"  …  \"2023-12-14T12:08:17.134__pomdp_trace.jld\", \"2023-12-14T12:08:31.842__pomdp_trace.jld\", \"2023-12-14T12:08:38.916__pomdp_trace.jld\", \"2023-12-14T12:08:38.962__pomdp_trace.jld\", \"2023-12-14T12:08:39.001__pomdp_trace.jld\", \"2023-12-14T12:10:11.880__pomdp_trace.jld\", \"2023-12-14T12:16:53.015__pomdp_trace.jld\", \"2023-12-14T12:17:20.027__pomdp_trace.jld\", \"2023-12-14T12:17:22.410__pomdp_trace.jld\", \"2023-12-14T12:17:25.367__pomdp_trace.jld\"]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +459,7 @@
        "deduplicate_participant_traces (generic function with 1 method)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +499,7 @@
        "visualize_trace (generic function with 1 method)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,19 +547,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element Vector{Int64}:\n",
-       " 5\n",
-       " 5\n",
-       " 6"
+       "4-element Vector{Int64}:\n",
+       "  5\n",
+       "  5\n",
+       " 21\n",
+       " 12"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +580,7 @@
        "0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,23 +591,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T10:52:11.987__pomdp_trace.jld.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "14"
+       "1"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,14 +620,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T10:52:44.356__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T12:19:47.937__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -639,18 +643,18 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "visualize_trace(traces[3][2])"
+    "visualize_trace(traces[4][3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +663,7 @@
        "GridWorlds.FGridWorld(FunctionalCollections.PersistentVector{GridWorlds.GridCell}[[GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall  …  GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall]  …  [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty  …  GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.empty, GridWorlds.wall], [GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall  …  GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall, GridWorlds.wall]], nothing, (37, 28))"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
