delete distractor notebooks

--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -1150,6 +1150,13 @@
      "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T13:48:20.070__pomdp_trace.jld.\n"
+     ]
     }
    ],
    "source": [
