--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 158,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 153,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:19:41.373__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:02:40.832__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -644,7 +644,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 156,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -685,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:19:58.685__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:03:10.818__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -694,7 +694,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 159,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -737,7 +737,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,6 +778,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fb73015",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "ad4e2c06",
    "metadata": {},
@@ -787,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 160,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -800,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 161,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
@@ -808,7 +816,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:21:36.934__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:04:06.285__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -817,7 +825,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 162,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -861,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 163,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
@@ -869,7 +877,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:24:49.136__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:05:52.896__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -878,7 +886,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -886,7 +894,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:27:48.268__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:07:37.987__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-14T16:07:39.458__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -916,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 164,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -929,24 +938,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 165,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:29:24.615__pomdp_trace.jld.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 166,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
@@ -977,7 +979,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:29:30.131__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:08:16.433__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -986,7 +988,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -994,7 +996,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:30:13.391__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:09:24.770__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -1024,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 167,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -1037,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 168,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1047,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:30:15.630__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:09:26.861__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -1054,7 +1056,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1062,7 +1064,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:33:19.723__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T16:10:19.824__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-14T16:10:29.606__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-14T16:10:32.467__pomdp_trace.jld.\n"
      ]
     }
    ],
