--- a/notebooks_messy/Experiment.ipynb
+++ b/notebooks_messy/Experiment.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 249,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 246,
    "id": "9dd2dc13",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:01:13.444__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T19:50:37.062__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -644,7 +644,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 247,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -685,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:03:03.937__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T19:50:47.074__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -694,7 +694,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 250,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -737,16 +737,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:04:19.950__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -808,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 251,
    "id": "2b1a6e6f",
    "metadata": {},
    "outputs": [],
@@ -821,17 +814,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 252,
    "id": "b3a8a204",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T19:51:46.004__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 253,
    "id": "941613b6",
    "metadata": {},
    "outputs": [],
@@ -875,17 +875,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 254,
    "id": "af5831bb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T19:52:48.722__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -893,7 +900,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:09:34.588__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T19:53:57.240__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -923,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 255,
    "id": "e8f16db5",
    "metadata": {},
    "outputs": [],
@@ -936,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 258,
    "id": "c48ae4c5",
    "metadata": {},
    "outputs": [
@@ -944,7 +951,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:10:32.741__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T19:54:34.309__pomdp_trace.jld.\n"
      ]
     },
     {
@@ -953,7 +960,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,26 +983,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 259,
    "id": "0b14bc20",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T19:54:37.336__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:11:26.755__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -1024,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 260,
    "id": "46028ac2",
    "metadata": {},
    "outputs": [],
@@ -1037,17 +1044,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 261,
    "id": "9143b84f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trace & viz actions serialized to saves/2023-12-14T19:55:16.685__pomdp_trace.jld.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1055,9 +1069,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T17:13:18.556__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T17:13:44.528__pomdp_trace.jld.\n",
-      "Trace & viz actions serialized to saves/2023-12-14T17:13:47.300__pomdp_trace.jld.\n"
+      "Trace & viz actions serialized to saves/2023-12-14T19:55:43.286__pomdp_trace.jld.\n",
+      "Trace & viz actions serialized to saves/2023-12-14T19:55:46.952__pomdp_trace.jld.\n"
      ]
     }
    ],
@@ -1132,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 242,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -1142,16 +1155,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-14T13:48:20.070__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -1160,7 +1166,7 @@
     "    # \"saves/2023-12-12T16:47:41.689__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T17:07:55.823__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T17:10:15.804__pomdp_trace.jld\",\n",
-    "    # \"saves/2023-12-12T17:45:51.846__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T17:45:51.846__pomdp_trace.jld\",z\n",
     "    # \"saves/2023-12-12T20:21:58.518__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T20:23:53.018__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T20:25:10.383__pomdp_trace.jld\",\n",
