Some interesting  visuals (i have no idea what I'm doing)

--- a/notebooks_messy/gridworld_slam.ipynb
+++ b/notebooks_messy/gridworld_slam.ipynb
@@ -771,7 +771,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 189,
+   "id": "d3f7db2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GenTraceKernelDSL.Kernel(var\"#1007#1008\"())"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function get_pf(pomdp, t_to_params, num_particles, initial_constraints=choicemap())\n",
+    "    # Call GenPOMDP's built-in method for constructing particle filters for POMDP environments.\n",
+    "    GenPOMDPs.pf(\n",
+    "        pomdp, t_to_params,\n",
+    "\n",
+    "        ### Specify how to initialize the particle filter. ###\n",
+    "        obs -> ( # Initialize via a 3-particle SMCP3 proposal.\n",
+    "            num_particles,\n",
+    "            GenSMCP3.SMCP3Update(\n",
+    "                _forward_proposal, _backward_proposal,\n",
+    "                # is_initial_step, t_to_params, new_action, new_obs\n",
+    "                (true, t_to_params, nothing, obs[:obs], initial_constraints), # no action before the initial observation\n",
+    "                # is_initial_step\n",
+    "                (true,)\n",
+    "            )\n",
+    "        ),\n",
+    "\n",
+    "        ### Specify the particle filter update. ###\n",
+    "        (action, obs) -> ( # Update with the SMCP3 proposal.\n",
+    "            GenSMCP3.SMCP3Update(\n",
+    "                _forward_proposal, _backward_proposal,\n",
+    "                # is_initial_step, t_to_params, new_action, new_obs\n",
+    "                (false, t_to_params, action, obs[:obs]),\n",
+    "                # is_initial_step\n",
+    "                (false,)\n",
+    "            ),\n",
+    "        );\n",
+    "\n",
+    "        # ### Specify the rejuvenation rule. [This argument to GenPOMDPs.pf can also be used to add MCMC rejuvenation, etc.] ###\n",
+    "        # pre_update=state -> resampling_rule(state, $(esc(_resampling_args))),\n",
+    "    )\n",
+    "end\n",
+    "\n",
+    "floor_offset(x) = floor(Int, x - 0.15)\n",
+    "ceil_offset(x) = ceil(Int, x + 0.15)\n",
+    "\n",
+    "# SMCP3 forward proposal\n",
+    "GenSMCP3.@kernel function _forward_proposal(prev_trace, is_initial_step, t_to_params, new_action, new_obs, init_constraints=choicemap())\n",
+    "    if is_initial_step\n",
+    "        t = 0\n",
+    "        # sample initial position using prior distribution\n",
+    "        trace, _ = generate(uniform_agent_pos, (T_TO_PARAMS_INTRO,), init_constraints)\n",
+    "    else\n",
+    "        prev_t, _ = get_args(prev_trace)\n",
+    "        t = prev_t + 1\n",
+    "\n",
+    "        last_state = prev_trace[GenPOMDPs.state_addr(prev_t)]\n",
+    "        # sample initial position using prior distribution\n",
+    "        trace, _ = generate(motion_model, (last_state, new_action, T_TO_PARAMS_INTRO,))\n",
+    "    end\n",
+    "    change_chp = choicemap(get_choices(trace))\n",
+    "\n",
+    "    # redraw map where ray hit wall\n",
+    "    state = get_retval(trace)\n",
+    "    width, height = state.world.size\n",
+    "    raw_map = Matrix{GridWorlds.GridCell}(undef, width, height)\n",
+    "    for i = 1:state.world.size[1]\n",
+    "        for j = 1:state.world.size[2]\n",
+    "            raw_map[i, j] = GridWorlds.empty\n",
+    "        end\n",
+    "    end\n",
+    "    obs_points = GridWorlds.points_from_raytracing(state.pos..., new_obs; is_continuous=true)\n",
+    "    for (_x, _y) in zip(obs_points...)\n",
+    "        x_op = state.pos[1] > _x ? floor_offset : ceil_offset\n",
+    "        y_op = state.pos[2] > _y ? floor_offset : ceil_offset\n",
+    "        x = clamp(x_op(_x), 1, width)\n",
+    "        y = clamp(y_op(_y), 1, height)\n",
+    "        raw_map[x, y] = GridWorlds.wall\n",
+    "    end\n",
+    "    world = GridWorlds.FGridWorld(raw_map, nothing, state.world.size)\n",
+    "\n",
+    "    change_chp[:world] = world\n",
+    "\n",
+    "    return (\n",
+    "        GenPOMDPs.nest_choicemap(change_chp, GenPOMDPs.state_addr(t)),\n",
+    "        EmptyChoiceMap() # Backward proposal is deterministic.\n",
+    "    )\n",
+    "end\n",
+    "\n",
+    "# SMCP3 backward proposal\n",
+    "GenSMCP3.@kernel function _backward_proposal(trace, is_initial_step)\n",
+    "    (t, actions, t_to_params) = get_args(trace)\n",
+    "    new_action = t > 0 ? actions[t] : nothing\n",
+    "    t_prev = t - 1\n",
+    "\n",
+    "    if is_initial_step\n",
+    "        var_names = [:world, :cell, :x, :y]\n",
+    "    else\n",
+    "        var_names = [:world, :noisy_next_pos]\n",
+    "    end\n",
+    "\n",
+    "\n",
+    "    fwd_ch = choicemap()\n",
+    "    for field in var_names\n",
+    "        fwd_ch[field] = trace[GenPOMDPs.state_addr(t, field)]\n",
+    "    end\n",
+    "\n",
+    "    return (\n",
+    "        EmptyChoiceMap(), # The old trace just drops values; no constraints needed.\n",
+    "        fwd_ch\n",
+    "    )\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "id": "927995ab",
    "metadata": {},
    "outputs": [
@@ -781,7 +903,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
