Visualize strange object

--- a/notebooks_messy/gridworld_slam.ipynb
+++ b/notebooks_messy/gridworld_slam.ipynb
@@ -771,17 +771,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 235,
    "id": "d3f7db2d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GenTraceKernelDSL.Kernel(var\"#1007#1008\"())"
+       "GenTraceKernelDSL.Kernel(var\"#1265#1266\"())"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
     "    )\n",
     "end\n",
     "\n",
-    "floor_offset(x) = floor(Int, x - 0.15)\n",
+    "floor_offset(x) = floor(Int, x)\n",
     "ceil_offset(x) = ceil(Int, x + 0.15)\n",
     "\n",
     "# SMCP3 forward proposal\n",
@@ -845,16 +845,17 @@
     "    raw_map = Matrix{GridWorlds.GridCell}(undef, width, height)\n",
     "    for i = 1:state.world.size[1]\n",
     "        for j = 1:state.world.size[2]\n",
-    "            raw_map[i, j] = GridWorlds.empty\n",
+    "            raw_map[i, j] = state.world.cells[i][j]\n",
     "        end\n",
     "    end\n",
+    "    new_obs = map(x -> x + 0.5, new_obs)\n",
     "    obs_points = GridWorlds.points_from_raytracing(state.pos..., new_obs; is_continuous=true)\n",
     "    for (_x, _y) in zip(obs_points...)\n",
     "        x_op = state.pos[1] > _x ? floor_offset : ceil_offset\n",
     "        y_op = state.pos[2] > _y ? floor_offset : ceil_offset\n",
     "        x = clamp(x_op(_x), 1, width)\n",
     "        y = clamp(y_op(_y), 1, height)\n",
-    "        raw_map[x, y] = GridWorlds.wall\n",
+    "        raw_map[x, y] = GridWorlds.strange\n",
     "    end\n",
     "    world = GridWorlds.FGridWorld(raw_map, nothing, state.world.size)\n",
     "\n",
@@ -892,8 +893,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fb5babf",
+   "metadata": {},
+   "source": [
+    "try using the map with strange object"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 236,
+   "id": "6ab7332e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # New interactive session.\n",
+    "# world_trace3, take_action3 = GenPOMDPs.interactive_world_trace(\n",
+    "#     trajectory_model, T_TO_PARAMS_INTRO,\n",
+    "#     choicemap(\n",
+    "#         (GenPOMDPs.state_addr(0, :cell), (3, 3)),\n",
+    "#         (GenPOMDPs.state_addr(0, :world), MAP_INTRO),\n",
+    "#     )\n",
+    "# );\n",
+    "\n",
+    "# # similar from above, except that we provide the initial position\n",
+    "# # without providing the map\n",
+    "# pf_states = GenPOMDPs.pf_observable(\n",
+    "#     get_pf(\n",
+    "#         pomdp,\n",
+    "#         T_TO_PARAMS_INTRO,\n",
+    "#         200,  # num_particles\n",
+    "#         choicemap((:world, MAP_INTRO), (:cell, (3, 3)))\n",
+    "#         # choicemap((:cell, (3, 3)))\n",
+    "#     ),\n",
+    "#     get_actobs_seq(world_trace3)\n",
+    "# );\n",
+    "\n",
+    "# # Display an interactive GUI, with the particles\n",
+    "# (f3, t3, actions3) = GridWorlds.Viz.interactive_gui(\n",
+    "#     t -> MAP_INTRO, get_posobs_seq(world_trace3), a -> take_action3((a, Dates.now())),\n",
+    "#     show_lines_to_walls=false,\n",
+    "#     framerate=8,\n",
+    "#     close_on_hitwall=false,\n",
+    "#     did_hitwall_observable=get_did_hitwall_observable(world_trace3),\n",
+    "#     close_window=close_window,\n",
+    "\n",
+    "#     # For playback\n",
+    "#     timing_args=get_timing_args(world_trace3; speedup_factor=1, max_delay=5)\n",
+    "# )\n",
+    "# GridWorlds.Viz.display_pf_localization!(f3, t3, pf_states_to_stateweights(pf_states, field=:pos))\n",
+    "# GridWorlds.Viz.display_pf_state!(f3, t3, pf_states_to_stateweights(pf_states))\n",
+    "\n",
+    "# display(f3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
    "id": "927995ab",
    "metadata": {},
    "outputs": [
@@ -903,7 +959,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,10 +967,10 @@
    "source": [
     "# New interactive session.\n",
     "world_trace3, take_action3 = GenPOMDPs.interactive_world_trace(\n",
-    "    trajectory_model, T_TO_PARAMS_INTRO,\n",
+    "    trajectory_model, T_TO_PARAMS_W_STRANGE,\n",
     "    choicemap(\n",
     "        (GenPOMDPs.state_addr(0, :cell), (3, 3)),\n",
-    "        (GenPOMDPs.state_addr(0, :world), MAP_INTRO),\n",
+    "        (GenPOMDPs.state_addr(0, :world), MAP_W_STRANGE),\n",
     "    )\n",
     ");\n",
     "\n",
@@ -923,17 +979,17 @@
     "pf_states = GenPOMDPs.pf_observable(\n",
     "    get_pf(\n",
     "        pomdp,\n",
-    "        T_TO_PARAMS_INTRO,\n",
+    "        T_TO_PARAMS_W_STRANGE,\n",
     "        200,  # num_particles\n",
-    "        # choicemap((:world, MAP_INTRO))\n",
-    "        choicemap((:cell, (3, 3)))\n",
+    "        choicemap((:world, MAP_WOUT_STRANGE), (:cell, (3, 3)))\n",
+    "        # choicemap((:cell, (3, 3)))\n",
     "    ),\n",
     "    get_actobs_seq(world_trace3)\n",
     ");\n",
     "\n",
     "# Display an interactive GUI, with the particles\n",
     "(f3, t3, actions3) = GridWorlds.Viz.interactive_gui(\n",
-    "    t -> MAP_INTRO, get_posobs_seq(world_trace3), a -> take_action3((a, Dates.now())),\n",
+    "    t -> MAP_W_STRANGE, get_posobs_seq(world_trace3), a -> take_action3((a, Dates.now())),\n",
     "    show_lines_to_walls=false,\n",
     "    framerate=8,\n",
     "    close_on_hitwall=false,\n",
